--- a/ui/login.ui
+++ b/ui/login.ui
@@ -75,7 +75,7 @@ border: 3px solid black;
  border-radius: 20px;
  padding: 10px 16px;
 background-color: transparent;
- color: black;
+ color: white;
     font-size: 14px;</string>
    </property>
    <property name="text">
@@ -122,7 +122,7 @@ background-color: transparent;
  border-radius: 20px;
  padding: 10px 16px;
 background-color: transparent;
- color: black;
+ color: white;
     font-size: 14px;</string>
    </property>
    <property name="echoMode">
