--- a/ui/home.ui
+++ b/ui/home.ui
@@ -38,7 +38,7 @@
     <enum>QFrame::Shape::NoFrame</enum>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="home">
     <widget class="QLabel" name="label">
@@ -552,25 +552,6 @@ border: none</string>
       <number>3000</number>
      </property>
     </widget>
-    <widget class="QLabel" name="label_40">
-     <property name="geometry">
-      <rect>
-       <x>720</x>
-       <y>30</y>
-       <width>71</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Century</family>
-       <pointsize>15</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>Khiem</string>
-     </property>
-    </widget>
     <widget class="QLabel" name="label_45">
      <property name="geometry">
       <rect>
@@ -1069,10 +1050,10 @@ Wind: 10 km/h</string>
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_3">
+    <widget class="QPushButton" name="btn_profile">
      <property name="geometry">
       <rect>
-       <x>770</x>
+       <x>850</x>
        <y>10</y>
        <width>51</width>
        <height>61</height>
